--- a/style.css
+++ b/style.css
@@ -36,4 +36,10 @@ h3 {
     font-family: Malibu;
     background-color: #FFF617;
     color:#252323;
+    display: flex;
+    flex-direction:column;
+    margin: 0px;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
