Remove body margin

--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ body {
     background-color: #252323;
     color: #EEEDE0;
     font-family: "Manjari";
+    padding:0px;
+    margin:0px;
 }
 
 h2 {
