--- a/style.css
+++ b/style.css
@@ -32,6 +32,10 @@ h2 {
 
 h3 {
     font-family: "Malibu";
+    color:#FFF617;
+    font-weight: normal;
+    text-align:center;
+    font-size: 2rem;
 }
 
 .hero {
@@ -43,11 +47,12 @@ h3 {
     margin: 0px;
     justify-content: center;
     align-items: center;
+    text-align: center;
     height: 100vh;
 }
 
 .hero h1 {
     font-size: 10vw;
-    text-align: center;
     font-weight:normal;
+    margin-bottom: 0px;
 }
