--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ h3 {
 .hero h1 {
     font-weight:normal;
     margin:0px;
-    font-size: 20vw;
+    font-size: 15vw;
     flex-shrink:1
 
 }
@@ -64,5 +64,6 @@ h3 {
     font-family: "Manjari";
     flex-shrink: 0;
     font-size: 5vw;
+    margin:0px;
 }
 
