--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ h3 {
 }
 
 .hero {
-    font-family: Malibu;
+    font-family: "Malibu";
     background-color: #FFF617;
     color:#252323;
     margin: 0px;
@@ -56,7 +56,8 @@ h3 {
     font-weight:normal;
     margin:0px;
     font-size: 15vw;
-    flex-shrink:1
+    flex-shrink:1;
+    color: #252323;
 
 }
 
@@ -67,3 +68,11 @@ h3 {
     margin:0px;
 }
 
+
+.about {
+    width: 60vw;
+    display:flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items: center;
+}
