--- a/style.css
+++ b/style.css
@@ -25,7 +25,6 @@ body {
     font-family: "Manjari";
     padding:0px;
     margin:0px;
-
 }
 
 h3 {
@@ -48,6 +47,7 @@ h3 {
     justify-content: center;
     align-items: center;
     text-align: center;
+    flex-shrink:0;
 
 }
 
@@ -70,7 +70,7 @@ h3 {
 
 
 .about {
-    width: 60vw;
+    margin: 0 10vw;
     display:flex;
     flex-direction:column;
     justify-content: center;
