--- a/style.css
+++ b/style.css
@@ -89,10 +89,13 @@ h3 {
     align-items: center;
 }
 
-.linkicon {
+.linkicon{
     background-color: #58EAA4;
     width: 60px;
     height: 60px;
     border-radius:50%;
 }
 
+.profilelinks {display:flex;
+
+}
