--- a/style.css
+++ b/style.css
@@ -25,6 +25,8 @@ body {
     font-family: "Manjari";
     padding:0px;
     margin:0px;
+
+   
 }
 
 h3 {
@@ -32,7 +34,7 @@ h3 {
     color:#FFF617;
     font-weight: normal;
     text-align:center;
-    font-size: 2rem;
+    font-size: 3em;
 }
 
 .hero {
@@ -68,25 +70,34 @@ h3 {
     margin:0px;
 }
 
+.contentwrapper {display:flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items: center;}
 
 .about {
-    margin: 0 10vw;
+
     display:flex;
     flex-direction:column;
     justify-content: center;
     align-items: center;
     flex-grow: 0px;
+    max-width: 60rem;
 }
  
 .profile-pic {
     width: 18em;
     border-radius: 50%;
     margin-right: 5vw;
+    flex-shrink:2;
 }
 
 .about-container {
     display: flex;
+    justify-content: center;
     align-items: center;
+    font-size:20px;
+
 }
 
 .linkicon{
@@ -94,6 +105,7 @@ h3 {
     width: 60px;
     height: 60px;
     border-radius:50%;
+    margin:12px;
 }
 
 .profilelinks {display:flex;
