--- a/style.css
+++ b/style.css
@@ -41,9 +41,6 @@ h3 {
     display:block;
 }
 
-
-
-
 .hero {
     font-family: "Malibu";
     background-color: #FFF617;
@@ -59,7 +56,6 @@ h3 {
     flex-shrink:0;
 
 }
-
 
 .hero h1 {
     font-weight:normal;
@@ -81,10 +77,12 @@ h3 {
     width:5rem;
     margin-top: 100px;
 }
+
 .contentwrapper {display:flex;
     flex-direction: column;
     justify-content:center;
-    align-items: center;}
+    align-items: center;
+}
 
 .about {
 
@@ -117,6 +115,22 @@ h3 {
     height: 60px;
     border-radius:50%;
     margin:12px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.linkicon img {
+    filter: invert(12%) sepia(4%) saturate(480%) hue-rotate(314deg) brightness(93%) contrast(93%);
+}
+
+.linkicon-img{
+    width: 60px;
+    height: 60px;
+    padding:0px;
+    margin:12px;
+    filter: brightness(0) saturate(100%) invert(87%) sepia(9%) saturate(2514%) hue-rotate(88deg) brightness(96%) contrast(90%);
 }
 
 .profilelinks {display:flex;
